--- a/.github/workflows/main_pipeline.yml
+++ b/.github/workflows/main_pipeline.yml
@@ -1,5 +1,7 @@
 name: main pipeline
 on: [push, workflow_dispatch]
+permissions:
+  contents: write
 jobs:
   quality-gates:
     runs-on: ubuntu-latest
