--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "cypress": "^14.2.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^3.5.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-cypress": "^4.2.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   }
 }
