docs: CFN-10 update readme.md and keywords

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "commitlint": "commitlint --edit"
   },
   "keywords": [
+    "coding fantasy",
+    "codingfantasy",
     "cypress",
     "javascript",
     "typescript",
