feat: CFN-4 add not stable login workflow

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grid-garden-notebook",
+  "name": "coding-fantasy-notebook",
   "version": "0.5.0",
   "type": "module",
   "description": "Solution list for grid garden play",
