--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -4,7 +4,7 @@ permissions:
   contents: write
 jobs:
   pipeline:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         node-version: [22.x]
