ci: CFN-11 check listof branches

--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -17,11 +17,12 @@ jobs:
           git config --global user.email "njkznu@gmail.com"
           git config --global user.name "kuzanatoliy"
           branchList=`git branch --remotes`
-          for branch in $branchList
-          do
-            name=`echo $branch | cut -d "/" -f 2`
-            if [ $name != master -a $name != develop -a $name != gh-pages ]
-            then
-              git push origin -d $name
-            fi
-          done
+          echo branchList
+          # for branch in $branchList
+          # do
+          #  name=`echo $branch | cut -d "/" -f 2`
+          #  if [ $name != master -a $name != develop -a $name != gh-pages ]
+          #  then
+          #    git push origin -d $name
+          #  fi
+          # done
