--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -20,7 +20,7 @@ jobs:
           for branch in $branchList
           do
             name=`echo $branch | cut -d "/" -f 2`
-            if [$name != -> -a $name != HEAD -a $name != master -a $name != develop -a $name != gh-pages ]
+            if [$name != "->" -a $name != "HEAD" -a $name != "master" -a $name != "develop" -a $name != "gh-pages" ]
             then
               git push origin -d $name
             fi
