ci: CFN-11 check branch list

--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -1,5 +1,5 @@
 name: cleaning
-on: workflow_dispatch
+on: push
 permissions:
   contents: write
 jobs:
@@ -17,6 +17,7 @@ jobs:
           git config --global user.email "njkznu@gmail.com"
           git config --global user.name "kuzanatoliy"
           branchList=`git branch --remotes | grep -v "origin/HEAD -> *"`
+          echo $branchList
           for branch in $branchList
           do
             name=`echo $branch | cut -d "/" -f 2`
