ci: CFN-11 check branch list

--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           git config --global user.email "njkznu@gmail.com"
           git config --global user.name "kuzanatoliy"
+          git branch --remotes | grep -v "origin/HEAD -> *"
           branchList=`git branch --remotes | grep -v "origin/HEAD -> *"`
           echo $branchList
           for branch in $branchList
