--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -16,13 +16,11 @@ jobs:
         run: |
           git config --global user.email "njkznu@gmail.com"
           git config --global user.name "kuzanatoliy"
-          git branch --remotes | grep -v "origin/HEAD -> *"
           branchList=`git branch --remotes | grep -v "origin/HEAD -> *"`
-          echo $branchList
           for branch in $branchList
           do
             name=`echo $branch | cut -d "/" -f 2`
-            if [$name != "master" -a $name != "develop" -a $name != "gh-pages" ]
+            if [$name != master -a $name != develop -a $name != gh-pages ]
             then
               git push origin -d $name
             fi
