ci: CFN-11 check name

--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -20,9 +20,11 @@ jobs:
           for branch in $branchList
           do
             name=`echo $branch | cut -d "/" -f 2`
+            echo $branch
             echo $name
             if [$name != master -a $name != develop -a $name != gh-pages ]
             then
+              echo $name
               # git push origin -d $name
             fi
           done
